--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   </header>
   <main class="container">
     <!-- gameArea will hold message/instructions and the start button -->
+    <div id="greeting-area">
+      <h1 id="greeting">Welcome Force-Sensitive!</h1>
+    </div>
     <div id="gameArea">
-      <h1 class="greeting">Welcome Force-Sensitive!</h1>
-      <h3 class="messaging">Press start to begin the trials.</h3>
+      <h3 id="messaging">Press start to begin the trials.</h3>
       <button type="submit" id="start">START</button>
       
     </div>
