--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="greeting-area">
       <h1 id="greeting">Welcome Force-Sensitive!</h1>
     </div>
-    <div id="gameArea">
+    <div id="game-area">
       <h3 id="messaging">Press start to begin the trials.</h3>
       <button type="submit" id="start">START</button>
       
