full working-logic! styled

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     
   </header>
   <main class="container">
+    <!-- empty div for the countdown timer -->
+    <div id=timer-area></div>
     <!-- gameArea will hold message/instructions and the start button -->
     <div id="greeting-area">
       <h1 id="greeting">Welcome Force-Sensitive!</h1>
@@ -23,8 +25,9 @@
     <div id="game-area">
       <h3 id="messaging">Press start to begin the trials.</h3>
       <button type="submit" id="start">START</button>
-      
     </div>
+    <div id="answer-area"></div>
+
   </main>
 </div>
 
